src/components/partials/BigDay.scss
.timeline {
    display: flex;
    padding: 4rem 0;
    border-bottom: 1px solid #f5f5f5;

    &__time {
        padding-right: 2rem;

        &--title {
            color: $grey-medium;
            display: none;
        }

        h5 {
            margin: -0.5rem 0 0;
        }
    }

    &__information {
        padding-left: 2.4rem;
        border-left: .4rem solid $black;

        h5 {
            margin: -0.5rem 0 1rem;
        }

        p {
            margin: 0;
            line-height: 130%;
            color: #666;
        }
    }
}

@media(max-width: 767px) {
    .timeline {
        &__time {
            h5 {
                font-size: 2rem;
                margin: -0.4rem 0 0;
            }
        }

        &__information {
            h5 {
                font-size: 2rem;
                margin: -0.4rem 0 .3rem;
            }
        }
    }
}

@media(max-width: 550px) {
    .timeline {
        padding: 3rem 0;
        flex-direction: column;

        &__time {
            &--title {
                display: inline;
            }
            h5 {
                font-size: 2rem;
                margin: -0.4rem 0 0;
            }
        }

        &__information {
            border: none;
            padding-left: 0;

            h5 {
                display: none;
            }
        }
    }
}

